comment out unwanted sections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - TheEvent Bootstrap Template</title>
+  <title>Quantum Fest ANU</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -50,12 +50,12 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
-          <li><a href="#speakers">Speakers</a></li>
+          <!-- <li><a href="#speakers">Speakers</a></li> -->
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
-          <li><a href="#hotels">Hotels</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- <li><a href="#hotels">Hotels</a></li> -->
+          <!-- <li><a href="#gallery">Gallery</a></li> -->
+          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -71,13 +71,13 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="#buy-tickets">Buy Tickets</a>
+      <a class="cta-btn d-none d-sm-block" href="#buy-tickets">Register</a>
 
     </div>
   </header>
@@ -90,8 +90,8 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">THE ANNUAL<br><span>MARKETING</span> CONFERENCE</h2>
-        <p data-aos="fade-up" data-aos-delay="200">10-12 December, Downtown Conference Center, New York</p>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="">THE ANNUAL<br><span>QUANTUM</span> FESTIVAL</h2>
+        <p data-aos="fade-up" data-aos-delay="200">18-19 November, The Australian National University, Canberra</p>
         <div data-aos="fade-up" data-aos-delay="300" class="">
           <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
         </div>
@@ -109,11 +109,11 @@
             </div>
             <div class="col-lg-3">
               <h3>Where</h3>
-              <p>Downtown Conference Center, New York</p>
+              <p>Physics Auditorium, Research School of Physics</p>
             </div>
             <div class="col-lg-3">
               <h3>When</h3>
-              <p>Monday to Wednesday<br>10-12 December</p>
+              <p>Tuesday & Wednesday<br>18-19 November</p>
             </div>
           </div>
         </div>
@@ -230,9 +230,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#day-2" role="tab" data-bs-toggle="tab">Day 2</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#day-3" role="tab" data-bs-toggle="tab">Day 3</a>
-          </li>
+          </li> -->
         </ul>
 
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
@@ -390,7 +390,7 @@
           </div><!-- End Schdule Day 2 -->
 
           <!-- Schdule Day 3 -->
-          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
+          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
@@ -458,7 +458,7 @@
               </div>
             </div>
 
-          </div><!-- End Schdule Day 3 -->
+          </div> --> <!-- End Schdule Day 3 -->
 
         </div>
 
@@ -478,7 +478,8 @@
 
         <div class="row g-0">
           <div class="col-lg-6 venue-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6513.7708856610625!2d149.11055417617123!3d-35.28397437271816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b164d37d3a4189f%3A0x5426c2d7cadf5e1d!2sANU%20Research%20School%20of%20Physics!5e0!3m2!1sen!2sau!4v1757937197207!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6513.7708856610625!2d149.11055417617123!3d-35.28397437271816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b164d37d3a4189f%3A0x5426c2d7cadf5e1d!2sANU%20Research%20School%20of%20Physics!5e0!3m2!1sen!2sau!4v1757937197207!5m2!1sen!2sau" frameborder="0" style="border:0" allowfullscreen=""></iframe>
           </div>
 
           <div class="col-lg-6 venue-info">
@@ -565,6 +566,7 @@
 
     </section><!-- /Venue Section -->
 
+    <template>
     <!-- Hotels Section -->
     <section id="hotels" class="hotels section">
 
@@ -616,6 +618,7 @@
       </div>
 
     </section><!-- /Hotels Section -->
+    </template>
 
     <!-- Gallery Section -->
     <section id="gallery" class="gallery section">
