update event schedule

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/Fall Fest Graphics/Emojis/Cat_01.png" rel="icon">
+  <link href="assets/Fall Fest Graphics/Badge/Badge.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -87,10 +87,10 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/Fall Fest Graphics/Illustration Exports/Full_Illustration.png" alt="" data-aos="fade-in" class="">
 
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">THE ANNUAL<br><span>QUANTUM</span> FESTIVAL</h2>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="">CELEBRATING<br><span>100 YEARS</span> OF QUANTUM</h2>
         <p data-aos="fade-up" data-aos-delay="200">18-19 November, The Australian National University, Canberra</p>
         <div data-aos="fade-up" data-aos-delay="300" class="">
           <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
@@ -225,10 +225,10 @@
 
         <ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
           <li class="nav-item">
-            <a class="nav-link active" href="#day-1" role="tab" data-bs-toggle="tab">Day 1</a>
+            <a class="nav-link active" href="#day-1" role="tab" data-bs-toggle="tab">Day 1<br>18 Nov </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#day-2" role="tab" data-bs-toggle="tab">Day 2</a>
+            <a class="nav-link" href="#day-2" role="tab" data-bs-toggle="tab">Day 2<br>19 Nov</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="#day-3" role="tab" data-bs-toggle="tab">Day 3</a>
@@ -243,25 +243,104 @@
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
-              <div class="col-md-10">
-                <h4>Registration</h4>
+              <div class="col-md-3"><time>09:30 AM</time></div>
+              <div class="col-md-6">
+                <h4>Event Opening</h4>
                 <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
-              <div class="col-md-10">
+              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-6">
                 <div class="speaker">
-                  <img src="assets/img/speakers/speaker-1-2.jpg" alt="Brenden Legros">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_01.png" alt="Brenden Legros">
                 </div>
-                <h4>Keynote <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4>Quantum Computing Spring <span>Speaker Name</span></h4>
+                <p>broad overview of quantum and associated sector</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Physics Auditorium, RSP</p>
               </div>
             </div>
 
             <div class="row schedule-item">
+              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_02.png" alt="Brenden Legros">
+                </div>
+                <h4>Quantum and Qiskit 101 <span>Speaker Name</span></h4>
+                <p>Hands-on coding session. BYOD</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Physics Auditorium, RSP</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>12:00 PM</time></div>
+              <div class="col-md-6">
+                <!-- <div class="speaker">
+                  <img src="assets/img/speakers/speaker-1-2.jpg" alt="Brenden Legros">
+                </div> -->
+                <h4>Light Refreshments <span>Brenden Legros</span></h4>
+                <p>Facere provident incidunt quos voluptas.</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Foyer, New Physics Building</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_03.png" alt="Brenden Legros">
+                </div>
+                <h4>Qiskit Lab 1 <span>Physics Experiments</span></h4>
+                <p>Hands-on coding session. BYOD</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Physics Auditorium, RSP</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_04.png" alt="Brenden Legros">
+                </div>
+                <h4>Industry Talk 1 <span>Speaker/Company Name</span></h4>
+                <p>broad overview of quantum and associated sector</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Physics Auditorium, RSP</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_01.png" alt="Brenden Legros">
+                </div>
+                <h4>Academic Talk 1 <span>Speaker/Group Name</span></h4>
+                <p>broad overview of quantum and associated sector</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Physics Auditorium, RSP</p>
+              </div>
+            </div>
+
+            <!-- <div class="row schedule-item">
               <div class="col-md-2"><time>11:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
@@ -314,7 +393,7 @@
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div>
+            </div> -->
 
           </div><!-- End Schdule Day 1 -->
 
@@ -322,29 +401,108 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
-              <div class="col-md-10">
+              <div class="col-md-3"><time>10:00 AM - 12:00 PM</time></div>
+              <div class="col-md-9">
                 <div class="speaker">
-                  <img src="assets/img/speakers/speaker-1-2.jpg" alt="Brenden Legros">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_02.png" alt="Brenden Legros">
                 </div>
-                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
+                <h4>DQST Lab Tours <span>Brenden Legros</span></h4>
                 <p>Facere provident incidunt quos voluptas.</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:00 AM</time></div>
-              <div class="col-md-10">
+              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-6">
                 <div class="speaker">
-                  <img src="assets/img/speakers/speaker-2-2.jpg" alt="Hubert Hirthe">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_03.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4>Troubleshooting <span>Hubert Hirthe</span></h4>
+                <p>names of participating entities</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>ANU University House</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:00 AM</time></div>
+              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_04.png" alt="Hubert Hirthe">
+                </div>
+                <h4>Qiskit Lab 2 <span>Error Mitigation</span></h4>
+                <p>names of participating entities</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>ANU University House</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_01.png" alt="Hubert Hirthe">
+                </div>
+                <h4>Industry Talk 2 <span>Hubert Hirthe</span></h4>
+                <p>names of participating entities</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>ANU University House</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_02.png" alt="Hubert Hirthe">
+                </div>
+                <h4>Industry Talk 3 <span>Hubert Hirthe</span></h4>
+                <p>names of participating entities</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>ANU University House</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_03.png" alt="Hubert Hirthe">
+                </div>
+                <h4>Event Closing <span>Hubert Hirthe</span></h4>
+                <p>prize distribution</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>ANU University House</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-6">
+                <div class="speaker">
+                  <img src="assets/Fall Fest Graphics/Emojis/Timeline_04.png" alt="Hubert Hirthe">
+                </div>
+                <h4>Networking Event <span>Hubert Hirthe</span></h4>
+                <p>names of participating entities</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>ANU University House</p>
+              </div>
+            </div>
+
+            <!-- <div class="row schedule-item">
+              <div class="col-md-2"><time>06:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="assets/img/speakers/speaker-3-2.jpg" alt="Cole Emmerich">
@@ -385,7 +543,7 @@
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div>
+            </div> -->
 
           </div><!-- End Schdule Day 2 -->
 
