add ANU and IBM Quantum logos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Quantum Fest ANU</title>
+  <title>ANU Quantum Springboard</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -53,6 +53,7 @@
           <!-- <li><a href="#speakers">Speakers</a></li> -->
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
+          <li><a href="#faq">FAQ</a></li>
           <!-- <li><a href="#hotels">Hotels</a></li> -->
           <!-- <li><a href="#gallery">Gallery</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -77,7 +78,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="#buy-tickets">Register</a>
+      <a class="cta-btn d-none d-sm-block" href="https://anuspringboard.eventbrite.com.au">Register</a>
 
     </div>
   </header>
@@ -842,7 +843,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Sponsors</h2>
+        <h2>Partners</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -851,11 +852,11 @@
         <div class="row g-0 clients-wrap">
 
           <div class="col-xl-3 col-md-4 client-logo">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+            <img src="assets/img/ANU_Primary_Horizontal_GoldBlack.jpg" class="img-fluid" alt="">
           </div><!-- End Client Item -->
 
           <div class="col-xl-3 col-md-4 client-logo">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+            <img src="assets/Fall Fest Graphics/Illustration Exports/IBM Quantum Logo.png" class="img-fluid" alt="">
           </div><!-- End Client Item -->
 
           <div class="col-xl-3 col-md-4 client-logo">
