remove footer social media icons

--- a/index.html
+++ b/index.html
@@ -1189,9 +1189,9 @@
       <div class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
-          <div>
+          <!-- <div>
             © Copyright <strong><span>MyWebsite</span></strong>. All Rights Reserved
-          </div>
+          </div> -->
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
@@ -1201,12 +1201,12 @@
           </div>
         </div>
 
-        <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
+        <!-- <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
           <a href=""><i class="bi bi-twitter-x"></i></a>
           <a href=""><i class="bi bi-facebook"></i></a>
           <a href=""><i class="bi bi-instagram"></i></a>
           <a href=""><i class="bi bi-linkedin"></i></a>
-        </div>
+        </div> -->
 
       </div>
     </div>
