remove buy tickets section

--- a/index.html
+++ b/index.html
@@ -964,6 +964,7 @@
 
     </section><!-- /Faq Section -->
 
+    <template>
     <!-- Buy Tickets Section -->
     <section id="buy-tickets" class="buy-tickets section light-background">
 
@@ -1035,6 +1036,7 @@
       </div>
 
     </section><!-- /Buy Tickets Section -->
+  </template>
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
