--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <!-- <li><a href="#speakers">Speakers</a></li> -->
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#venue">Venue</a></li>
+          <li><a href="#hotels">Resources</a></li>
           <li><a href="#faq">FAQ</a></li>
           <!-- <li><a href="#hotels">Hotels</a></li> -->
           <!-- <li><a href="#gallery">Gallery</a></li> -->
@@ -725,7 +726,7 @@
 
     </section><!-- /Venue Section -->
 
-    <template>
+    
     <!-- Hotels Section -->
     <section id="hotels" class="hotels section">
 
@@ -777,7 +778,6 @@
       </div>
 
     </section><!-- /Hotels Section -->
-    </template>
 
     <!-- Gallery Section -->
     <section id="gallery" class="gallery section">
