add event schedule details

--- a/index.html
+++ b/index.html
@@ -245,15 +245,19 @@
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>09:30 AM</time></div>
+              <div class="col-md-3"><time>10:00 AM - 10:20 AM</time></div>
               <div class="col-md-6">
                 <h4>Event Opening</h4>
-                <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
+                <p>Welcome and overview of the day</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Physics Auditorium, RSP</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-3"><time>10:20 AM - 11:00 AM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_01.png" alt="Brenden Legros">
@@ -268,13 +272,13 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-3"><time>11:00 AM - 12:00 PM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_02.png" alt="Brenden Legros">
                 </div>
-                <h4>Quantum and Qiskit 101 <span>Speaker Name</span></h4>
-                <p>Hands-on coding session. BYOD</p>
+                <h4>Qiskit &forall; Zero to Hero <span>TBD</span></h4>
+                <p>Hands on coding session. BYOD</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
@@ -283,13 +287,13 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>12:00 PM</time></div>
+              <div class="col-md-3"><time>12:00 PM - 12:30 PM</time></div>
               <div class="col-md-6">
                 <!-- <div class="speaker">
                   <img src="assets/img/speakers/speaker-1-2.jpg" alt="Brenden Legros">
                 </div> -->
-                <h4>Light Refreshments <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4>Light Refreshments <span>Afternoon Tea</span></h4>
+                <p>Fuel up for the first coding challenge!</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
@@ -298,13 +302,13 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-3"><time>12:30 PM - 02:00 PM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_03.png" alt="Brenden Legros">
                 </div>
-                <h4>Qiskit Lab 1 <span>Physics Experiments</span></h4>
-                <p>Hands-on coding session. BYOD</p>
+                <h4>Qiskit Lab 1 <span>TBD</span></h4>
+                <p>Recreate Physics Experiments. Coding Challenge. BYOD</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
@@ -313,13 +317,13 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-3"><time>02:20 PM - 03:00 PM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_04.png" alt="Brenden Legros">
                 </div>
                 <h4>Industry Talk 1 <span>Speaker/Company Name</span></h4>
-                <p>broad overview of quantum and associated sector</p>
+                <p>TBD</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
@@ -328,17 +332,29 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>10:00 AM</time></div>
+              <div class="col-md-3"><time>03:00 PM - 03:40 PM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_01.png" alt="Brenden Legros">
                 </div>
-                <h4>Academic Talk 1 <span>Speaker/Group Name</span></h4>
-                <p>broad overview of quantum and associated sector</p>
+                <h4>Industry Talk 2 <span>Speaker/Company Name</span></h4>
+                <p>TBD</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
                 <p>Physics Auditorium, RSP</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>03:40 PM - 04:00 PM</time></div>
+              <div class="col-md-6">
+                <h4>FAQ Session</h4>
+                <p>Bring your Qiskit and Quantum doubts.</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Foyer, New Physics Building</p>
               </div>
             </div>
 
@@ -404,12 +420,16 @@
 
             <div class="row schedule-item">
               <div class="col-md-3"><time>10:00 AM - 12:00 PM</time></div>
-              <div class="col-md-9">
-                <div class="speaker">
+              <div class="col-md-6">
+                <!-- <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_02.png" alt="Brenden Legros">
-                </div>
-                <h4>DQST Lab Tours <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                </div> -->
+                <h4>ANU Quantum Lab Tours <span>Registration required</span></h4>
+                <p>Start your day with a dive into the quantum realm!</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Foyer, New Physics Building</p>
               </div>
             </div>
 
@@ -419,12 +439,12 @@
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_03.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Troubleshooting <span>Hubert Hirthe</span></h4>
-                <p>names of participating entities</p>
+                <h4>Troubleshooting <span>Qiskit</span></h4>
+                <p>Let's make some repairs to the matrix</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
-                <p>ANU University House</p>
+                <p>Foyer, New Physics Building</p>
               </div>
             </div>
 
@@ -449,12 +469,12 @@
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_01.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Industry Talk 2 <span>Hubert Hirthe</span></h4>
-                <p>names of participating entities</p>
+                <h4>Industry Talk 3 <span>Speaker/Company name</span></h4>
+                <p>TBD</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
-                <p>ANU University House</p>
+                <p>Physics Auditorium, RSP</p>
               </div>
             </div>
 
@@ -464,27 +484,27 @@
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_02.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Industry Talk 3 <span>Hubert Hirthe</span></h4>
-                <p>names of participating entities</p>
+                <h4>Industry Talk 4 <span>Speaker/Company name</span></h4>
+                <p>TBD</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
-                <p>ANU University House</p>
+                <p>Physics Auditorium, RSP</p>
               </div>
             </div>
 
             <div class="row schedule-item">
               <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
               <div class="col-md-6">
-                <div class="speaker">
+                <!-- <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_03.png" alt="Hubert Hirthe">
-                </div>
-                <h4>Event Closing <span>Hubert Hirthe</span></h4>
-                <p>prize distribution</p>
+                </div> -->
+                <h4>Event Closing <span></span></h4>
+                <p>Grab the goodies!</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
-                <p>ANU University House</p>
+                <p>Physics Auditorium, RSP</p>
               </div>
             </div>
 
@@ -494,12 +514,12 @@
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_04.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Networking Event <span>Hubert Hirthe</span></h4>
-                <p>names of participating entities</p>
+                <h4>Networking Event <span>Pizza night!</span></h4>
+                <p>Powered by: </p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
-                <p>ANU University House</p>
+                <p>Foyer, New Physics Building</p>
               </div>
             </div>
 
@@ -780,6 +800,7 @@
     </section><!-- /Hotels Section -->
 
     <!-- Gallery Section -->
+    <template>
     <section id="gallery" class="gallery section">
 
       <!-- Section Title -->
@@ -837,6 +858,7 @@
       </div>
 
     </section><!-- /Gallery Section -->
+    </template>
 
     <!-- Sponsors Section -->
     <section id="sponsors" class="sponsors section light-background">
