add venue details and pics

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
 
-          <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+          <h3 class="sub-heading">Jump off into the quantum realm from the ANU Quantum Springboard</h3>
 
           <!-- Schdule Day 1 -->
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
@@ -248,7 +248,7 @@
               <div class="col-md-3"><time>10:00 AM - 10:20 AM</time></div>
               <div class="col-md-6">
                 <h4>Event Opening</h4>
-                <p>Welcome and overview of the day</p>
+                <p>Welcome and overview of the event</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
@@ -292,7 +292,7 @@
                 <!-- <div class="speaker">
                   <img src="assets/img/speakers/speaker-1-2.jpg" alt="Brenden Legros">
                 </div> -->
-                <h4>Light Refreshments <span>Afternoon Tea</span></h4>
+                <h4>Light Refreshments <span>Luncheon Tea</span></h4>
                 <p>Fuel up for the first coding challenge!</p>
               </div>
               <div class="col-md-3">
@@ -449,22 +449,37 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-3"><time>02:00 PM - 3:30 PM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_04.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Qiskit Lab 2 <span>Error Mitigation</span></h4>
-                <p>names of participating entities</p>
+                <h4>Qiskit Lab 2 <span>TBD</span></h4>
+                <p>Quantum Machine Learning</p>
               </div>
               <div class="col-md-3">
                 <h4>Location</h4>
-                <p>ANU University House</p>
+                <p>Physics Auditorium, RSP</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-3"><time>03:30 PM - 04:00 PM</time></div>
+              <div class="col-md-6">
+                <!-- <div class="speaker">
+                  <img src="assets/img/speakers/speaker-1-2.jpg" alt="Brenden Legros">
+                </div> -->
+                <h4>Light Refreshments <span>Afternoon Tea</span></h4>
+                <p>Reward your coding efforts with some snacks</p>
+              </div>
+              <div class="col-md-3">
+                <h4>Location</h4>
+                <p>Foyer, New Physics Building</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-3"><time>04:10 PM - 4:50 PM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_01.png" alt="Hubert Hirthe">
@@ -479,7 +494,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-3"><time>04:50 PM - 5:30 PM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_02.png" alt="Hubert Hirthe">
@@ -494,7 +509,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-3"><time>05:30 PM - 5:50 PM</time></div>
               <div class="col-md-6">
                 <!-- <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_03.png" alt="Hubert Hirthe">
@@ -665,8 +680,8 @@
           <div class="col-lg-6 venue-info">
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8 position-relative">
-                <h3>Downtown Conference Center, New York</h3>
-                <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
+                <h3>Research School of Physics, ANU</h3>
+                <p>Building 160, Mills Rd, Acton ACT - 2601</p>
               </div>
             </div>
           </div>
@@ -680,7 +695,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/venue-gallery-1.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/venue-gallery-1.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/new-physics-building-front-board.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -688,7 +703,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/venue-gallery-2.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/venue-gallery-2.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/new-physics-building-front-no-people.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -709,7 +724,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
+          <!-- <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/venue-gallery-5.jpg" class="glightbox" data-gall="venue-gallery">
                 <img src="assets/img/venue-gallery/venue-gallery-5.jpg" alt="" class="img-fluid">
@@ -739,7 +754,7 @@
                 <img src="assets/img/venue-gallery/venue-gallery-8.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
